--- a/package.json
+++ b/package.json
@@ -22,22 +22,23 @@
     "@eth-optimism/sdk": "^2.1.0",
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.7.3",
-    "@rainbow-me/rainbowkit": "^0.11.0",
-    "@wagmi/cli": "^0.1.10",
+    "@rainbow-me/rainbowkit": "^1.0.3",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "util": "^0.12.4",
-    "wagmi": "^0.11.7"
+    "viem": "^1.1.8",
+    "wagmi": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
+    "@wagmi/cli": "^1.3.0",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.5",
+    "typescript": "^5.1.3",
     "vite": "^4.1.4"
   }
 }
