--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rainbow-me/rainbowkit": "^1.0.3",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
+    "mixpanel-browser": "^2.47.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "wagmi": "^1.2.2"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "^2.47.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
