updating wagmi viem

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.7.3",
     "@rainbow-me/rainbowkit": "^1.0.3",
+    "@wagmi/core": "^1.4.12",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "mixpanel-browser": "^2.47.0",
@@ -30,8 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "util": "^0.12.4",
-    "viem": "^1.1.8",
-    "wagmi": "^1.2.2"
+    "viem": "^1.19.15",
+    "wagmi": "^1.4.12"
   },
   "devDependencies": {
     "@types/mixpanel-browser": "^2.47.1",
