--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@eth-optimism/contracts-bedrock": "^0.12.1",
     "@eth-optimism/contracts-periphery": "^1.0.7",
     "@eth-optimism/sdk": "^0.0.0-20230711223728",
-    "@rainbow-me/rainbowkit": "^1.3.0",
-    "@wagmi/core": "^1.4.12",
+    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@tanstack/react-query": "^5.40.0",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "mixpanel-browser": "^2.47.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "viem": "^1.19.15",
-    "wagmi": "^1.4.12",
+    "viem": "2.x",
+    "wagmi": "^2.9.8",
     "znv": "^0.4.0",
     "zod": "^3.23.8"
   },
