--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eth-optimism/sdk": "^0.0.0-20230711223728",
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.40.0",
+    "@wagmi/core": "^2.10.5",
     "buffer": "^6.0.3",
     "ethers": "^5.7.2",
     "mixpanel-browser": "^2.47.0",
