--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
     "vite": "^4.1.4"
   }
