--- a/package.json
+++ b/package.json
@@ -5,29 +5,27 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:production": "vite build",
     "preview": "vite preview",
     "lint": "prettier --write \"**/*.{ts,tsx}\"",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "add:shadcn": "pnpm dlx shadcn add"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-    "@rainbow-me/rainbowkit": "^2.1.2",
-    "@tanstack/react-query": "^5.40.0",
-    "@wagmi/core": "^2.10.5",
-    "buffer": "^6.0.3",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.59.20",
+    "@wagmi/core": "^2.14.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
     "mixpanel-browser": "^2.47.0",
-    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.12",
-    "wagmi": "^2.9.8",
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.31",
     "znv": "^0.4.0",
     "zod": "^3.23.8"
   },
@@ -42,6 +40,6 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
-    "vite": "^4.1.4"
+    "vite": "^5.4.11"
   }
 }
